Fix overflow issue on desktop devices

--- a/web/css/base/_typography.less
+++ b/web/css/base/_typography.less
@@ -70,9 +70,11 @@
         }
     }
 
-    .table-wrapper {
-        overflow-x: auto;
-        position: relative;
+    @media @media-md-down {
+        .table-wrapper {
+            overflow-x: auto;
+            position: relative;
+        }
     }
     table {
         .text-align(left);
